Add 'add' and 'show' command.

--- a/experiment_3/Makefile
+++ b/experiment_3/Makefile
@@ -1,5 +1,5 @@
 CC=cc
-CFLAGS=-Wall -g
+CFLAGS=-Wall -g -std=c89
 BIN=contact
 
 all: $(BIN)
@@ -8,7 +8,7 @@ $(BIN): contact.o
 	$(CC) -o $@ $<
 
 %.o: %.c
-	$(CC) -c -o $@ $(CFLAGS) $<
+	$(CC) -o $@ $(CFLAGS) -c $<
 
 .PHONY:
 clean:
